--- a/src/assets/css/Style.css
+++ b/src/assets/css/Style.css
@@ -95,7 +95,7 @@ body {
 
 .navbar {
 	
-    overflow: hidden;
+  overflow: hidden;
 	background-color: #333;
 }
 
@@ -117,10 +117,10 @@ body {
 }
 
 .navbar li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
 	text-decoration: none;
 	transition: all ease-in 0.1s
 }
@@ -128,7 +128,6 @@ body {
 .navbar li a:hover {
 	background-color:#fff;
 	color: #111;
-	
 }
 
 .nav-name{
@@ -151,29 +150,27 @@ body {
 	margin: 5px;
 }
 
-.records {
+/* .records {
 	list-style: none;
 	display: grid;
 	grid-template-columns: auto;
 	padding: 20px;
 	justify-content: center;
-}
+} */
 
-.card {
-    
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+/* .card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 	transition: 0.3s;
-	
 	width: 500px;
-}
+} */
 
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
+/* .card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+} */
 
-.container {
-    padding: 2px 16px;
-}
+/* .container {
+  padding: 2px 16px;
+} */
 
 .grid-container {
 	display: grid;
@@ -190,10 +187,10 @@ body {
 	justify-content: center;
 }
 
-.record-image {
+/* .record-image {
 	height: 100%;
 	width: 100%;
-  }
+} */
 
 .record-title {
 	font-size: 25px;
@@ -379,26 +376,26 @@ body {
 }
 
 .tooltip .tooltiptext {
-    visibility: hidden;
-    width: 200px;
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
+  visibility: hidden;
+  width: 200px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
 	padding: 5px;
 	font-size: 15px;
-    position: absolute;
+  position: absolute;
 	z-index: 1;
 }
 
 .tooltip:hover .tooltiptext {
-    visibility: visible;
+  visibility: visible;
 }
 
 .table {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100vw;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	border-collapse: collapse;
+	width: 100vw;
 }
 
 .table td, .table th {
@@ -420,16 +417,16 @@ body {
 
 
 .modal {
-    display: none; 
-    position: fixed; 
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%;
-    overflow: auto; 
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4); 
+	display: none; 
+	position: fixed; 
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%; 
+	height: 100%;
+	overflow: auto; 
+	background-color: rgb(0,0,0);
+	background-color: rgba(0,0,0,0.4); 
 }
 
 
@@ -473,14 +470,13 @@ body {
 }
 
 .cardx {
-    
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 	transition: 0.3s;
 }
 
 
 .cardx:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .hero {
@@ -515,8 +511,8 @@ body {
   }
 .navbar.responsive ul {
 	float: none;
-    display: block;
-    text-align: left;
+  display: block;
+  text-align: left;
   }
   /* Media Queries */
 @media only screen and (max-width: 720px){
@@ -526,8 +522,8 @@ body {
 	}
 
 	.hero>h2{
-	  	font-size: 40px;
-	  	text-align: center;
+	  font-size: 40px;
+	  text-align: center;
 	}
 
 	.nav-mobile {
