--- a/src/assets/css/Style.css
+++ b/src/assets/css/Style.css
@@ -454,10 +454,14 @@ body {
   text-align: left;
   }
   /* Media Queries */
-@media only screen and (max-width: 720px){
+@media only screen and (max-width: 820px){
 	
 	nav ul {
 		display: none;
+	}
+
+	.col-3 {
+		width: 100%;
 	}
 
 	.hero>h2{
