--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -106,6 +106,10 @@ body {
     width: 100%;
     height: 200px;
 }
+.record-imagex{
+    width: 100%;
+    height: 400px;
+}
 .container {
     display: flex;
     flex-direction: column;
@@ -184,7 +188,7 @@ ul li {
 .input{
 	padding: 12px;
 	margin: 5px;
-	width: 400px;
+	width: 100%;
 	display: inline-block;
 	font-size: 15px;
 }
@@ -199,6 +203,7 @@ ul li {
         border-style: solid;
         border-color: grey;
         border-width: 1px;
+        width: 100%;
     }
     .mini-card {
         width: 100%;
