--- a/src/assets/css/Style.css
+++ b/src/assets/css/Style.css
@@ -209,6 +209,7 @@ body {
 .input-group{
 	margin: 5px;
 	display: flex;
+	width: 100%;
 	align-content: center;
 	align-items: center;
 	justify-content: center;
@@ -453,14 +454,23 @@ body {
   display: block;
   text-align: left;
   }
-  /* Media Queries */
-@media only screen and (max-width: 820px){
+	/* Media Queries */
+
+@media only screen and (max-width: 320px){
+	.col-3 {
+		width: 100%;
+	}
+}
+@media only screen and (max-width: 720px){
 	
 	nav ul {
 		display: none;
 	}
 
 	.col-3 {
+		width: 100%;
+	}
+	.col-5 {
 		width: 100%;
 	}
 
